added metrics and elk